--- a/Server/package.json
+++ b/Server/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.ts",
+    "dev": "tsx --watch app.ts",
+    "build": "tsc",
+    "lint": "npx eslint",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "type": "module",
@@ -15,5 +19,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.21.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.6"
   }
 }
