--- a/Server/package.json
+++ b/Server/package.json
@@ -22,12 +22,14 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.21.0",
+    "nodemailer": "^7.0.12",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6"
+    "@types/express": "^5.0.6",
+    "@types/nodemailer": "^7.0.5"
   }
 }
