--- a/Server/package.json
+++ b/Server/package.json
@@ -31,6 +31,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.5"
   }
 }
