--- a/Server/package.json
+++ b/Server/package.json
@@ -32,6 +32,9 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/nodemailer": "^7.0.5"
+    "@types/node": "^22.0.0",
+    "@types/nodemailer": "^7.0.5",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
