--- a/Server/package.json
+++ b/Server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node app.ts",
+    "start": "node dist/app.js",
     "dev": "tsx --watch app.ts",
     "build": "tsc",
     "lint": "npx eslint",
